feat: Implement RunPod Integration Service with Docker support
- Added Dockerfile for containerization of the RunPod Integration Service.
- Created package.json with necessary dependencies and scripts.
- Developed server.js to handle API endpoints for text generation, chat completion, and image generation using RunPod.
- Implemented health check endpoint and logging middleware.
- Added character management service with CRUD operations and caching using Redis.
- Integrated Eliza Bridge service for character generation and refinement.
- Established PostgreSQL database utility for data persistence.
- Introduced logging utility using Winston for better error tracking and debugging.
- Set up Redis utility for caching and session management.

--- a/docker-compose.eliza.yml
+++ b/docker-compose.eliza.yml
@@ -37,9 +37,10 @@ services:
       context: ./eliza-framework
       dockerfile: Dockerfile
     ports:
-      - "3001:3000"
+      - "4001:4001"
     environment:
       - NODE_ENV=production
+      - PORT=4001
       - DATABASE_URL=postgresql://postgres:password@postgres:5432/eliza
       - REDIS_URL=redis://redis:6379
     volumes:
@@ -224,7 +225,7 @@ services:
     image: grafana/grafana:latest
     container_name: grafana-dashboard
     ports:
-      - "3001:3000"
+      - "3002:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin123
       - GF_INSTALL_PLUGINS=grafana-piechart-panel
